[package]
name = "imgui-glium-renderer"
version = "0.11.0"
edition = "2021"
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-glium-renderer"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { git = "https://github.com/glium/glium" }
imgui = { version = "0.11.0", path = "../imgui" }
winit = "0.28"

[dev-dependencies]
imgui-winit-support = {path = "../imgui-winit-support"}
